--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -10,11 +10,11 @@ services:
     # https://github.com/mattwebbio/orbital-sync
     image: mattwebbio/orbital-sync:{{ orbital_sync_version }}
     container_name: {{ docker_project_slug }}
-    restart: unless-stopped
+    restart: {{ docker_project_restart }}
 
     network_mode: host
 
-    {{ docker_project_compose_service_additional_options | indent(4) }}
+    {{ docker_project_service_additional_options | indent(4) }}
 
     environment:
       PRIMARY_HOST_BASE_URL: '{{ orbital_sync_primary_pihole.base_url }}'
